src/style.css
@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:700');

html, body
{
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    font-family: 'Raleway', Arial, sans-serif;
}

#root{
    width: 100%;
    height: 100%;
}

h1 {
    font-weight: 800;
    font-size: 3.75em;
    margin-bottom: 0.3em;
    line-height: 1em;
}

h2{
    font-weight: 800;
    font-size: 2em;
    margin-bottom: 0.3em;
}

p, li, fieldset, label, select {
    font-size: 1.5em;
    line-height: 1.4em;
}


.form-field{
    opacity: 0.7;
    display: inline-block;
    padding-right: 20px;
}

.form-group{
    margin: 0 0 20px 20px;
}

.form-group .text-help{
    /*display: inline-block;*/
    padding: 10px 10px 0 0;
}

.form-group-has-danger input{
    background-color: #ffae80;
}

select{
    padding: 10px;
    margin-bottom: 20px;
    border-radius: 5px;
    border: none;
}

input{
    font-size: 1.2em;
    padding: 10px;
    border-radius: 5px;
    border: none;
}

.controls-block{
    display: inline-block;
}

.controls-block-user{
    float: right;
}

.slim-btn-group{
    display: none;
}

.slim-btn {
    border-radius: 0;
}

.inputfile {
    width: 0.1px;
    height: 0.1px;
    opacity: 0;
    overflow: hidden;
    position: absolute;
    z-index: -1;
}

.inputfile + label {
    display: inline-block;
    margin: 0;
    cursor: pointer;
    line-height: 0;
}

.inputfile + label * {
    pointer-events: none;
}

.inputfile + label:hover {
    /*background-color: red;*/
}

label.disabled{
    background-color: aliceblue;
    opacity: 0.8;
    cursor: not-allowed;
}

.no-scroll-bars{
    overflow: hidden;
}

.page-main-section {
    margin-bottom: 40px;
    padding-left: 10px;
    padding-right: 10px;
    display: flex;
    flex-direction: column;
}

.page-main-section form {
    display: flex;
    flex-direction: column;
}

.sketch-butt{
    cursor: pointer;
    padding: 0;
    margin: 0;
    border: none;
    outline: none;
    width: 65px;
    display: inline-block;
}

.slim-image-editor .slim-editor-btn-group button {
    text-decoration: none;
    font-size: 20px;
    text-align: center;
    cursor: pointer;
    outline: none;
    color: #000;
    background-color: #ecf0f1;
    border: none;
    border-radius: 5px;
    box-shadow: 0 5px rgba(0, 0, 0, 0.5);
}

.slim-image-editor .slim-editor-utils-group button{
    width:auto;
    padding: 0 1em;
    background-image: none;
    color: #000;
    background-color: #ecf0f1;
    font-size: 20px;
    border: none;
    border-radius: 5px;
    box-shadow: 0 5px rgba(0, 0, 0, 0.5);
    content: 'whatever it is you want to add';
}

.slim-image-editor .slim-editor-utils-group button:after{
    content: 'Rotate';
}

@media only screen and (max-width: 500px) {
    h1 {
        font-size: 2.5em;
        margin-bottom: 0.1em;
    }

    h2{
        font-size: 1.5em;
        margin-bottom: 0.3em;
    }

    p, li {
        font-size: 1.1em;
    }

    input{
        font-size: 0.9em;
        padding: 10px;
        margin-bottom: 20px;
        border-radius: 5px;
        border: none;
    }

    .page .page-title h1 {
        padding: 60px 30px 0 30px;
        margin-bottom: 60px;
        text-align: center;
    }

    .slim-image-editor .slim-editor-utils-group button{
        font-size: 16px;
    }

    .slim-image-editor .slim-editor-btn-group button {
        font-size: 16px;
    }
}

